Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -81,11 +81,11 @@
 
 \begin{document}
 
-\journaltitle{Journal Title Here}
-\DOI{DOI HERE}
-\copyrightyear{2022}
-\pubyear{2019}
-\access{Advance Access Publication Date: Day Month Year}
+\journaltitle{Journal of Language Evolution}
+\DOI{N/A}
+\copyrightyear{N/A}
+\pubyear{N/A}
+\access{Advance Access Publication Date: N/A}
 \appnotes{Paper}
 
 \firstpage{1}
@@ -117,7 +117,7 @@
 %online.}
 %We suggest a maximum length of 350 words for the Abstract
 
-\abstract{There are more than 7,000 languages on our planet today, but they are not evenly distributed over the population. There are over 100 languages in Vanuatu, but only one in S\={a}moa. This is in spite of the populations being similarly sized, having similar histories etc. Why might this be? This paper explores this question for one particular region: Remote Oceania. Remote Oceania comprises the eastern Solomon Islands (Temotu), Vanuatu, New Caledonia, Fiji, Polynesia and Micronesia. The region was settled more recently than the rest of Oceania and initially entirely by Austronesian speakers. Through community knowledge, studies in archaeology, history and linguistics much is known about migration patterns and societal organization of this part of the world. The comparatively shallow time depth, the relatedness of the languages and established knowledge about the history make it an ideal base for understanding language diversification. One particular theory has been proposed to explain the discrepancy in language richness over Remote Oceania --- societal organisation. In this study, we test if this factor remains an important predictor of the number of languages also when other relevant factors are taken into account, such as time-depth and environment. The results show that the theory does hold in terms of statistical power, but that there are important caveats such as the instantiation of the variable ``political complexity'' and its relationship with contact with Oceanic neighbours further west who do not speak Austronesian languages.}
+\abstract{There are more than 7,000 languages on our planet today, but they are not evenly distributed over the population. There are over 100 languages in Vanuatu, but only one in S\={a}moa. This is in spite of the populations being similarly sized, having similar histories etc. Why might this be? This paper explores this question for one particular region: Remote Oceania. Remote Oceania comprises the eastern Solomon Islands (Temotu), Vanuatu, New Caledonia, Fiji, Polynesia and Micronesia. The region was settled more recently than the rest of Oceania and initially entirely by Austronesian speakers. Through studies in archaeology, history and linguistics, as well as community knowledge, much is known about migration patterns and societal organization of this part of the world. The comparatively shallow time depth, the relatedness of the languages and established knowledge about the history make it an ideal base for understanding language diversification. One particular theory has been proposed to explain the discrepancy in language richness over Remote Oceania --- societal organisation. In this study, we test if this factor remains an important predictor of the number of languages also when other relevant factors are taken into account, such as time-depth and environment. The results show that the theory does hold in terms of statistical power, but that there are important caveats such as the instantiation of the variable ``political complexity'' and its relationship with contact with Oceanic neighbours further west who do not speak Austronesian languages.}
 
 %Scholars have suggested several reasons for the large discrepancy between the number of languages per island group in Remote Oceania, such as societal organisation, environmental factors and settlement time. 
 
@@ -155,7 +155,7 @@ Let us compare two island groups in this region as an example: the S\={a}moan ar
 
 Besides time depth, we might also expect that more space entails greater language diversity. A larger area makes it possible to spread out communities, which can entail language splitting. However, the shoreline\footnote{Since Austronesian settlements are mainly found on the coast, we are comparing shorelines instead of land area.} of Malakula is 67\% of that of S\={a}moa. S\={a}moa is larger than Malakula. What other factors are there that can aid our understanding here?
 
-\citet{turner1884} and \citet{pawley81,pawley2007} have suggested that the discrepancy between the number of languages in different parts of Remote Oceania can be related to societal structure. Societies in Vanuatu and New Caledonia tend to be less hierarchical than societies in Polynesia. Societies with fewer vertical levels of political structure are associated with more linguistic and cultural diversity. Conversely, more hierarchically complex societies are associated with linguistic and cultural homogeneity. This hypothesis does not necessarily entail that individual leaders in more stratified societies have a direct effect on the nature of the language of the community by means of their personality, conscious policies or directives. Instead, it is more likely that the political structure is indicative of different kinds of community network structures and attitudes. A shared cultural identity and frequent interactions might encourage conformity. Section \ref{sec:previous_research} teases out this line of argumentation in more detail.
+\citet{turner1884} and \citet{pawley81,pawley2007} have suggested that the discrepancy between the number of languages in different parts of Remote Oceania can be related to societal structure. Societies in Vanuatu and New Caledonia tend to be less hierarchical than societies in Polynesia. Societies with fewer vertical levels of political structure are associated with more linguistic and cultural diversity. Conversely, more hierarchically complex societies are associated with linguistic and cultural homogeneity.
 
 %A measurement of so-called ``political complexity'' in ethnographic surveys (c.f. \citet{gray1998ethnographic}) should then be correlated with different patterns of interaction and show up as a significant factor in language diversification. This is true even if political complexity is merely a proxy measurement of the interaction pattern that is in fact driving language change. 
 
@@ -170,7 +170,9 @@ This study tests the hypothesis that more vertical levels of political organisat
 \label{sec:previous_research}
 Linguists, anthropologists and scholars of other fields have long remarked on the link between linguistic diversity and political structure in Remote Oceania. One of the oldest examples of this observation is the European Turner who travelled in the region 1861-1884 and hypothesized that the lack of regional variation \emph{within} S\={a}moan entailed that they had long had a centralized government \citep[172]{turner1884}. Linguists have linked types of societal organization to different diversification processes. Language change is embedded in social structure (c.f. \citep{WLH1968}), or as \citet[124]{grace_1992_aberrant} writes: ``linguistic similarities and differences [are] reflections of community structures''. As community ties weaken and what was once one social network splits in twain, we expect that this is reflected in language variation as well. In this way, language studies provide insights to neighbouring fields such as archaeology, anthropology etc.
 
-\citet{pawley81, pawley2007} discusses the specific hypothesis that while much of Remote Oceania was settled in similar ways by Austronesian-speaking people, and at comparable time depths, and developed similarly immediately after the first settlement, the differences between them stem from the rise of powerful chiefs and maintenance of long-distance voyaging in the island groups of Polynesia. This theory suggests that the steps of the diversification process were more or less the same, but that the \emph{rate} by which it progressed differed and that this is the cause for the variation we see today.\footnote{\citet{lynch1981melanesian} calls this ``the diversification cycle theory''.} The societal structure in Polynesia was such that the process of cultural diversification was slower than in Vanuatu and New Caledonia. The following quote from \citet{pawley2007} summarises a few of these points and links them to the political organisation:
+\citet{pawley81, pawley2007} discusses the specific hypothesis that while much of Remote Oceania was settled in similar ways by Austronesian-speaking people, and at comparable time depths, and developed similarly immediately after the first settlement, the differences between them stem from the rise of powerful chiefs and maintenance of long-distance voyaging in the island groups of Polynesia. This theory suggests that the steps of the diversification process were more or less the same, but that the \emph{rate} by which it progressed differed and that this is the cause for the variation we see today.\footnote{\citet{lynch1981melanesian} calls this ``the diversification cycle theory''.} The societal structure in Polynesia was such that the process of cultural diversification was slower than in Vanuatu and New Caledonia. 
+
+The following quote from \citet{pawley2007} summarises a few of these points and links them to the political organisation:
 
 %This diversification process has two stages. First, there are similar sequences of rapid expansion over the entire island group, and sparse settlement with trade and marriages between different sister communities. Second, there is denser settlement associated with localised trade and marriage practices between sister communities, more intensive agriculture and weakening of kin ties and linguistic divergence. 
 
@@ -179,16 +181,21 @@ Linguists, anthropologists and scholars of other fields have long remarked on th
 
 This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acyclic Graph (DAG, c.f. \citet{pearl1995causal} and \citet{mcelreath2020statistical}. This lets us view the chain of argumentation in a stylized and formal visualisation that can lead directly to statistical modelling and comparison between proposals (c.f. \citet{roberts2020chield}). Fig. \ref{Predicting_lgs_DAG_andy} contains such a graph, based on the author's interpretation of Pawley's proposal in more detail. The connection between the rise of powerful chiefs and language richness is not direct, but mediated through a number of other factors. 
 
+
+
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\textwidth]{Predicting_lgs_DAG_andy.png}
+\includegraphics[width=0.7\textwidth]{Predicting_lgs_DAG_andy.png}
 \caption{Directed Acyclic Graph of the argument presented in \cite{pawley2007}. Blue = variable to be predicted (response).}
 \label{Predicting_lgs_DAG_andy}
 \end{figure}
 
-Fig. \ref{Predicting_lgs_DAG_full} in \ref{appendix_DAG_def} contains a larger version that incorporates more of the suggested linkages beyond those suggested by Pawley, for example, that political complexity may affect the modularity and interconnectedness of social networks and this, in turn, affects language splitting. However, most of these factors are more difficult to measure or have not been measured (dashed outlines in the DAGs), whereas ``political complexity'' is a variable in the Ethnographic Atlas (c.f. \citet{gray1998ethnographic}).
+Fig. \ref{Predicting_lgs_DAG_full} in \ref{appendix_DAG_def} contains a larger version that incorporates more of the suggested linkages beyond those suggested by Pawley, for example, that political complexity may affect the modularity and interconnectedness of social networks and this, in turn, affects language splitting. 
+
+It is possible that individual leaders in more stratified societies do not have a direct effect on the nature of the language of the community by means of their personality, conscious policies or directives. It is possible the political structure itself is indicative of a certain community network structure and attitude.
 
 In a similar vein to Pawley, \citet{curriemace2009} suggests that more stratified societies are correlated with larger language areas in Africa and Eurasia. If one language covers a large area, then the number of languages per square kilometre is lower than otherwise --- the language density is lower. Their research can be interpreted to mean that more stratified societal structures are more capable of sustaining linguistic homogeneity over a larger geographical area (or possibly reducing diversity by cultural dominance and warfare). Greater maintenance of cultural homogeneity would result in less language splitting over larger areas, and therefore a larger language area correlates with greater stratification. The approach is different from \citet{pawley81, pawley2007}, but the scientific line of argumentation is similar.
+
 
 Returning to language richness in Remote Oceania, a significant factor to consider besides those already discussed is contact --- in particular with people from the New Guinea region (c.f. \citet{ross2017_new_guinea_region}). Prior to European colonisation, all indigenous communities of Remote Oceania spoke the languages of the Austronesian family (see Fig \ref{RO_overnight_coloured_dots}). This family has its ultimate origins in Taiwan, and spread into the Remote Oceania approximately 3-4,000 years ago (c.f. Fig. \ref{austro_expansion_bellwood}). The peopling of New Guinea, the Bismarck archipelago and much of the Solomon Islands however is older than that, and there is a great amount of language and cultural diversity there that may have influenced Austronesian people during and/or after their journeys east. 
 
@@ -292,7 +299,7 @@ The results were calculated in R 3.6.0 \citep{R} using the function \texttt{brms
 \FloatBarrier
 \section{Results}
 % BARG
-We will first go through the outcomes for the shared language island groups, and secondly the overnight distance groups. In common for both is that political complexity is a relevant predicting factor, with a negative effect (the more political vertical levels, the lower the number of languages). This lends support to the proposal by \citet{pawley81} and \citet{pawley2007}. However, there are details of the result that suggest that the effect may be due to non-Austronesian contact rather than political complexity \emph{per se}.
+We will first go through the outcomes for the shared language island groups (i.e. groups of islands that share at least one language), and secondly the overnight distance groups. In common for both is that political complexity is a relevant predicting factor, with a negative effect (the more political vertical levels, the lower the number of languages). This lends support to the proposal by \citet{pawley81} and \citet{pawley2007}. However, there are details of the result that suggest that the effect may be due to non-Austronesian contact rather than political complexity \emph{per se}.
 
 Fig.~\ref{medium_model_predict} shows the actual observed language counts (purple triangles) and predictions of this model (green boxplots). The model does predict that Santo, Kanaky and Malakula have the highest language counts in the dataset. Our observed language counts for Santo, Kanky and Malakula are 24, 29 and 33 respectively. The model is very close for Santo and Kanaky for its average prediction value but underestimates Malakula by 17 languages. The absolute average difference between the mean predicted values and the observed is 2.8.
 
@@ -307,20 +314,22 @@ Fig.~\ref{medium_model_predict} shows the actual observed language counts (purpl
 
 For the shared language island groups, political complexity (EA033) is the only variable that is different from zero, i.e. the full coefficient distribution does not overlap zero. If we only consider the 95\% credibility interval, as is common practice in statistics, there is one additional term that does not overlap zero: shoreline in interaction with time-depth. Fig \ref{brms_SBZR_group_full_effect_ridge_panels} in Appendix \ref{appendix_supp_figs} shows the full distributions.
 
+% #Frederic says: could also compute pareto-k https://mc-stan.org/loo/reference/pareto-k-diagnostic.html
+
 If we drop one island group out at a time and re-run the model, we can asses which island groups represent the largest challenge to fitting the model. Most of the island groups can be removed with little effect (see Fig. \ref{brms_medium_dropped_out_plot_diff} in \ref{appendix_supp_figs}), however, when Malakula (central Vanuatu), Kanaky (New Caledonia main island) and Santo (central Vanuatu) are left out, the difference becomes much lower. They are the three island groups with the highest number of languages (see Fig \ref{polygon_plot_medium} in appendix \ref{sec:island_geo}). Political complexity remains the most important predicting factor in these three models, the coefficient distributions do not overlap with zero.
 
 %and shoreline in interaction with time depth are the variables that have a significant impact, i.e. do not cross zero (see coefficent distributions in Figs.  and \ref{brms_medium_group_full_effect_ridge_panels} in appendix \ref{appendix_supp_figs}).
 
-For the overnight-sailing distances, several island groups are much larger than the previous grouping. The islands of Vanuatu  (including Anuta and Tikopia) and Temotu are all within the same group (see Fig \ref{polygon_plot_SBZR} in appendix \ref{sec:island_geo}; this is similar to the groups considered in \citet{pawley2007}). This also leads to a larger discrepancy between the number of languages, with Vanuatu and Temotu having 130 and S\={a}moa still only one. The average absolute difference between the predicted and observed number of languages is greater than for the previous grouping --- 4.3. Fig \ref{SBZR_model_predict} shows the prediction vs observed per island group.
+For the overnight sailing distances, several island groups are much larger than the previous grouping. The islands of Vanuatu  (including Anuta and Tikopia) and Temotu are all within the same group (see Fig \ref{polygon_plot_SBZR} in appendix \ref{sec:island_geo}; this is similar to the groups considered in \citet{pawley2007}). This also leads to a larger discrepancy between the number of languages, with Vanuatu and Temotu having 130 and S\={a}moa still only one. The average absolute difference between the predicted and observed number of languages is greater than for the previous grouping --- 4.3. Fig \ref{SBZR_model_predict} shows the prediction vs observed per island group.
 
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.75\textwidth]{latex/brms_predict_SBZR.png}
-\caption{Prediction from the model with island grouped for overnight sailing distances. Number of languages is on the x-axis, observations on the Y. The dark blue triangles represent the observed number of languages, the green boxplot the predictions of the model. Average absolute difference between the mean of the predictions and the observed  4.3.}
+\caption{Prediction from the model with island grouped for overnight sailing distances. The number of languages is on the x-axis, and observations on the Y. The dark blue triangles represent the observed number of languages and the green boxplot the predictions of the model. The average absolute difference between the mean of the predictions and the observed  4.3.}
 \label{SBZR_model_predict}
 \end{figure}
 
-The most important variables in this model (i.e. coefficient distribution does not overlap 0) were: shoreline, political complexity, time depth and time-depth in interaction with shoreline (see Fig \ref{brms_SBZR_group_full_effect_ridge_panels}). However, if we drop out Vanuatu + Temotu this no longer holds. When Vanuatu + Temotu are left out, the coefficient distribution of political complexity overlaps zero. Instead, the environmental PCs, Shoreline and time depth are relevant predictors.\footnote{They are relevant if we consider the 95\% credibility interval. If we take the full distribution, all terms overlap zero.} When Vanuatu + Temotu are dropped out, the overall difference between predicted and observed values goes down significantly (from 4.3 to 2, see Fig. \ref{brms_SBZR_dropped_out_plot_diff}). If we ask this model that has been trained without the Vanuatu + Temotu data to predict how many languages are there, it grossly underestimates and proposes 7 languages (observed = 130). If we drop out any other island group (including Kanaky), political complexity remains a significant factor as it does in the model with all observations.
+The most important variables in this model (i.e. coefficient distribution does not overlap 0) were: political complexity, environmental PC1, shoreline, time depth and time-depth in interaction with shoreline  (see Fig \ref{brms_SBZR_group_full_effect_ridge_panels}). However, if we drop out Vanuatu + Temotu this no longer holds. When Vanuatu + Temotu are left out, the coefficient distribution of political complexity overlaps zero. Instead, the environmental PCs, Shoreline and time depth are relevant predictors.\footnote{They are relevant if we consider the 95\% credibility interval. If we take the full distribution, all terms overlap zero.} When Vanuatu + Temotu are dropped out, the overall difference between predicted and observed values goes down significantly (from 4.3 to 2, see Fig. \ref{brms_SBZR_dropped_out_plot_diff}). If we ask this model that has been trained without the Vanuatu + Temotu data to predict how many languages are there, it grossly underestimates and proposes 7 languages (observed = 130). If we drop out any other island group (including Kanaky), political complexity remains a significant factor as it does in the model with all observations.
 
 For tables of the effect Estimate, Rhat and ESS for both models, please see Appendix \ref{BRMS_model_tables}.
 
@@ -404,7 +413,8 @@ Political complexity is, perhaps unsurprisingly, a complex variable. There are a
 
 %\newpage
 \singlespacing
-%\onecolumn
+\onecolumn
+
 \begin{appendices}
 
 %\appendix
@@ -425,18 +435,14 @@ All the R-scripts for data wrangling, analysis and plotting are found on GitHub 
 
 GitHub locations:
 \begin{itemize}
-\item predicting\_number\_lgs\_in\_remote\_oceania  \url{https://github.com/HedvigS/predicting_number_lgs_in_remote_oceania}
+\item predicting\_number\_lgs\_in\_remote\_oceania  \textcolor{red}{withheld while in review process}
 \item glottolog-cldf (v3) \url{https://github.com/glottolog/glottolog/tree/v3.0}
-\item dplace-data (v) \url{}
-%# double check versions
 \end{itemize}
 
 Zenodo locations:
 \begin{itemize}
 \item predicting\_number\_lgs\_in\_remote\_oceania  \textcolor{red}{TBA Zenodo-url}
 \item glottolog-cldf (v3) \url{https://doi.org/10.5281/zenodo.437430}
-\item dplace-data (v) \url{https://doi.org/10.5281/zenodo.5554395}
-%# double check versions
 \end{itemize}
 
 
@@ -463,7 +469,7 @@ There is a marked difference in the biodiversity of Near and Remote Oceania, due
 
 The greater distances between the islands of Remote Oceania is also the reason why they were settled by people much later than Near Oceania was (3,000 years versus 20,000-60,000 years ago). It was necessary to develop particular sailing techniques to traverse these greater distances in order to settle the region.
 
-In this study, the region of Remote Oceania is defined slightly differently from the maps in \citet{green1991near} and \citet{pawley2007locatingoceanic}. All Northern Polynesian Outliers in Papua New Guinea and Solomons are incorporated, as is Mapia in northwest Papua New Guinea. The lines in the maps of \citet{green1991near} and \citet{pawley2007locatingoceanic} appear not to include these in Remote Oceania. I have included them in part to complete the Polynesian subgroup of languages and the languages of the Micronesian archipelagos, but also because it appears that these were not inhabited prior to the Austronesian expansion into the rest of Remote Oceania (c.f \citet[23]{kirch2012basline}) which suggests that they are sufficiently distant from the larger islands of Near Oceania to be counted as ``Remote''.
+In this study, the region of Remote Oceania is defined slightly differently from the maps in \citet{green1991near} and \citet{pawley2007locatingoceanic}. All Northern Polynesian Outliers in Papua New Guinea and Solomons are incorporated, as is Mapia in northwest Papua New Guinea. The lines in the maps of \citet{green1991near} and \citet{pawley2007locatingoceanic} appear not to include these in Remote Oceania. I have included them in part to complete the Polynesian subgroup of languages and the languages of the Micronesian archipelagos, but also because it appears that these were not inhabited prior to the Austronesian expansion into the rest of Remote Oceania (c.f. \citet[23]{kirch2012basline}) which suggests that they are sufficiently distant from the larger islands of Near Oceania to be counted as ``Remote''.
 
 Regarding the terms ``Near'' and ``Remote'', there are two interpretations of what they are referring to:
 
@@ -543,7 +549,7 @@ Unlike SIL's ISO 639-3, Glottolog does not discuss shared cultural identity or l
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\textwidth]{Glottolog_classifying_tree.png}
+\includegraphics[width=0.8\textwidth]{Glottolog_classifying_tree.png}
 \caption[Decision tree for language identification and classification in Glottolog]{{Decision tree for language identification and classification in Glottolog \citep{glottologlanguoids}.}}
 \label{glottolog_class_tree}
 \end{figure}
@@ -604,7 +610,7 @@ However, this way of grouping islands does not take into account currents and wi
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\textwidth]{Herb-Kane_Fishing-Canoe-off-North-Kona.jpg}
+\includegraphics[width=0.7\textwidth]{Herb-Kane_Fishing-Canoe-off-North-Kona.jpg}
 \caption{{The painting ``A Fishing Canoe off North Kona'' by Herbert Kawainui K{\=a}ne. Illustration of an outrigger canoe with v-shaped hull. Copyright Herbert K. K{\=a}ne, LLC.}}
 \label{kane_fishing_canoe}
 \end{figure}
@@ -615,8 +621,6 @@ However, this way of grouping islands does not take into account currents and wi
 \caption{{Distribution of languages per overnight sailing distance island group.}}
 \label{polygon_plot_SBZR}
 \end{sidewaysfigure}
-
-
 
 \textbf{Grouping islands based on (at least one) shared language}. If two islands share a language, they are classified as of the same island group. For example, all islands of the Tuamotu archipelago (where Tuamotuan [tuam1242] is spoken) are merged, even though they are grouped into several separate island groups by the overnight distance approach. Vanuatu, being a land of great language diversity, has a different group for almost every island. Another example is the Tungaru islands (western islands of modern-day Kiribati) and Tuvalu which actually share a language. Most people of the country of Tuvalu speak Tuvaluan, but there is one island, Nui, where Tungaru (Gilbertese [gilb1244]) is also spoken \citep{faaniu1983tuvalu, macdonald_2020, omniglot_tuvaluan}. We will call these island groups \textit{shared language groups}. Fig \ref{polygon_plot_medium} shows these groups, and their language counts. Out of the 65 island groups that were included in the modelling, 21 had only one language.
 
@@ -649,7 +653,7 @@ The hypothesis tested in this study relies on a systematic measure of political 
 
 The Ethnographic Atlas was first published in 1962 and is one of the datasets included in D-PLACE \citep{d_place_all}. EA033 is widely used to represent ``political complexity'' in studies of cultural evolution. This variable has been used to study the relationships between language area, subsistence strategies and political organisation \citep{curriemace2009}; processes of rise and fall of ``political complexity'' in South-east Asia and the Pacific \citep{currie2010rise}; the spread of Christianity in the Pacific \citep{watts_2018}; and co-evolution of intensive use of natural resources and political structure \citep{sheehan2018coevolution}.  
 
-In all of the studies referenced above, EA033 is used as a way of quantifying vertical political structure within a given society beyond the local community. In the rest of this study we will be referring to this variable as ``political complexity''. There is a separate variable (EA032) for jurisdictional hierarchy \emph{within} local communities. This variable could not be included due to missing data. 
+In all of the studies referenced above, EA033 is used as a way of quantifying vertical political structure within a given society beyond the local community. We refer to this variable as ``political complexity''. There is a separate variable (EA032) for jurisdictional hierarchy \emph{within} local communities. This variable could not be included due to missing data. 
 
 ``Local community'' is in the ethnographic/anthropological literature is defined as the ``maximal group of persons who normally reside together in face-to-face association'' \citep{yale1945outline}. The size and distribution of local community may vary greatly. For Remote Oceania, the Ethnographic Atlas records entries ranging from less than 50 (Ponape) to between 400-1000 (Tikopia).
 
@@ -722,8 +726,6 @@ However, this framework is less easy to apply to the Melanesian islands of Remot
 Given our language classification earlier, there are 233 language communities in our maximal sample. The ethnographic data is collected per society, and as was mentioned earlier it is possible for different societies to have the same language. Societies with the same language have been merged and our smallest cultural units of analysis are the language-society\footnote{American S\={a}moans and Upolu S\={a}moans were the only societies that needed merging in this fashion.}. Each language is associated with the islands and atolls where it is described as spoken. The full geographical dataset contains 5,525 unique landmass polygons\footnote{The total number of polygons in the geographical dataset is 9,750, but this includes New Guinea and uninhabited islands (Phoenix Islands for example). 5,525 is the number of unique polygons that can be associated with a community of Remote Oceania.} which have been grouped into our smallest geographical unit of analysis: 104 shared language island groups. In the analysis, we will also be aggregating the islands into 69 overnight distance groups.
 
 D-PLACE has a value recorded for political complexity for 44 ``language-societies'' in Remote Oceania. There have also been more recent studies where other authors have added more entries. We will be using additional data-points from a separate publication by \citet{sheehan2018coevolution}, resulting in another 27 data-points. There was an overlap between these two datasets, 26 language-socities having a coding both in the original Ethnographic Atlas dataset in D-PLACE and in Sheehan et al. Of these, 11 societies (i.e. 43\%) were coded exactly the same. Upon closer investigation of the instances where the coding differed, I found that Sheehan et al often had access to \textit{more} data, more \textit{comprehensive} data and more \textit{recent} data. Each of these instances was re-evaluated, and most often the coding from Sheehan et al was kept\footnote{I am grateful to Sheehan for very helpful personal correspondence during this process.}. The data was also further supplemented with information from \citet[201]{bonnemaison1996graded}, resulting in 66 more data-points in Vanuatu. 
-
-
 
 %For the instances where they had represented the same society with different values, I consulted the relevant ethnographies myself and made my own coding decision. In the most cases, my evaluation of the data sided with the interpretation by Sheehan et al. Given that Sheehan et al have access to more recent and more comprehensive ethnographic material, it shouldn't be surprising that they have made different decisions and that a second look is more likely to agree with their evaluation than the older dataset. 
 
@@ -905,6 +907,8 @@ All measurements, except the response variable, were scaled and centred to make 
 \section{Defining of Directed Acyclic Graph and variables}
 \label{appendix_DAG_def}
 
+However, most of these factors are more difficult to measure or have not been measured (dashed outlines in the DAGs), whereas ``political complexity'' is a variable in the Ethnographic Atlas (c.f. \citet{gray1998ethnographic}).
+
  There are set procedures for how to prune and translate a DAG for modelling (\citet{pearl1995causal} and \citet{mcelreath2020statistical}). 
 
 This dataset does not contain information on population size because there is no resource with sufficient coverage for all of the island groups. \citet{raviv2019larger} and other studies have shown that community size may influence language diversification independently from network structure. I am including variables that may correlate with population size, such as area, rainfall and temperature. It is possible to interpret the effect of those variables as related to population size.
@@ -1067,18 +1071,15 @@ All the analysis for this research project was done in the free and open source 
 No competing interest is declared.
 
 
-\section*{Acknowledgements}
+%\section*{Acknowledgements}
 
-The research leading to this paper has received funding from the Department of Linguistic and Cultural Evolution, Max Planck Institute for Evolutionary, the School of Culture, History and Language at the Australian National University and from the Australian Research Council through The Wellsprings of Linguistic Diversity Laureate Project (awarded to Professor Nicholas Evans 2014-2018) and the Centre of Excellence for the Dynamics of Language (CoEDL).
+%The research leading to this paper has received funding from the Department of Linguistic and Cultural Evolution, Max Planck Institute for Evolutionary, the School of Culture, History and Language at the Australian National University and from the Australian Research Council through The Wellsprings of Linguistic Diversity Laureate Project (awarded to Professor Nicholas Evans 2014-2018) and the Centre of Excellence for the Dynamics of Language (CoEDL).
 
-I am fortunate enough to have colleagues in academia who have been generous enough to discuss conceptual methodological matters with me, these are Stephen Mann, Angela Chira, Russell Gray, Oleg Sobchuk, Richard McElreath, Tiago Tresoldi, Michael Dunn, Hannah Haynie, Outi Vesakoski, Fredric Blum and Luke Maurits. I am also grateful for the advice of Mary Walworth, Ray Harlow, Andrew Pawley, Paul Geraghty and Alexandre François concerning language classification; Matthew Spriggs, Geoff Kushnick and Christopher Ballard regarding archaeology and anthropology of Oceania and finally Oliver Sheehan for helpful discussions regarding coding of the Ethnographic Atlas variables.
+%I am fortunate enough to have colleagues in academia who have been generous enough to discuss conceptual methodological matters with me, these are Stephen Mann, Angela Chira, Russell Gray, Oleg Sobchuk, Richard McElreath, Tiago Tresoldi, Michael Dunn, Hannah Haynie, Outi Vesakoski, Fredric Blum and Luke Maurits. I am also grateful for the advice of Mary Walworth, Ray Harlow, Andrew Pawley, Paul Geraghty and Alexandre François concerning language classification; Matthew Spriggs, Geoff Kushnick and Christopher Ballard regarding archaeology and anthropology of Oceania and finally Oliver Sheehan for helpful discussions regarding coding of the Ethnographic Atlas variables.
 
-I also want to thank my PhD supervisors who reviewed earlier versions of this study for my thesis \citep{skirgaard2020multilevel} and provided insightful input; Nicholas Evans, Andrew Pawley, Mark Ellison and Simon Greenhill.
+%I also want to thank my PhD supervisors who reviewed earlier versions of this study for my thesis \citep{skirgaard2020multilevel} and provided insightful input; Nicholas Evans, Andrew Pawley, Mark Ellison and Simon Greenhill.
 
-Any mistakes and misconceptions that remain are my own.
-
-
+%Any mistakes and misconceptions that remain are my own.
 
 %TC:endignore
-
 \end{document}
